* Fixed wrong color variable eused in message unread border

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/message.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/message.scss
@@ -30,7 +30,7 @@
 }
 
 .message--unread {
-  border-left: solid 3px $color-communicator-application-list-item-unread-border;
+  border-left: solid 3px $color-message-unread-border;
 }
 
 .message--thread-op {
